###################################################################
#                                                                 
# BRIEF:                                                          
#	This is used by the GNU auto-build to create a Makefile.
#                                                                 
# DESCRIPTION:
#
# NOTE:
#	MYODBCConfig has not been fully integrated into the myodbc 
#       GNU auto-build yet.
#
###################################################################

if QT

bin_MYODBCCONFIG = 

endif

###################################################################
#                                                                 #
# More files to include in source distro.                         #
#                                                                 #
###################################################################

EXTRA_DIST = \
	main.cpp \
	myodbc3c.icns \
	CMakeLists.txt
